<resources>
    <string name="app_name">2018 FIFA WORLD CUP RUSSIA™</string>
    <!--14 JUNE - 15 JULY-->
    <string name="title_home">Home</string>
    <string name="title_groups">Groups</string>
    <string name="title_matches">Matches</string>
    <string name="title_knockout">Knockout</string>
    <string name="title_grade">Grade</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
