<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/group"
        android:title="@string/title_groups" />

    <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/schedule"
        android:title="@string/title_matches" />

    <!--android:icon="@drawable/ic_notifications_black_24dp"-->
    <item
        android:id="@+id/navigation_knockout"
        android:icon="@drawable/knockout2"
        android:title="@string/title_knockout" />

    <item
        android:id="@+id/navigation_grade"
        android:icon="@drawable/knockout"
        android:title="@string/title_grade" />

</menu>
